# bmbp

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build_linux.sh  build_linux_arm.sh  build_scss.sh  img_convert.py
bmbp/: Cargo.toml
bmbp/src/: main.rs
bmbp_api/: Cargo.toml
bmbp_app/: Cargo.toml
bmbp_app/src/: lib.rs
bmbp_app/src/cache/: mod.rs
bmbp_app/src/data/: mod.rs
bmbp_app/src/env/: vars.rs
bmbp_app/src/routes/: mod.rs
bmbp_audit/: Cargo.toml
bmbp_auth/: Cargo.toml
bmbp_auth/src/: layer.rs
bmbp_bpm/: Cargo.toml
bmbp_common/: Cargo.toml
bmbp_common/src/: lib.rs
bmbp_common/src/func/: http.rs
bmbp_common/src/types/: http.rs
bmbp_config/: Cargo.toml
bmbp_docker/: Cargo.toml
bmbp_dsl_define/: Cargo.toml
bmbp_dsl_define/src/: lib.rs
bmbp_dsl_editor/: Cargo.toml
bmbp_dsl_parser/: Cargo.toml
bmbp_email/: Cargo.toml
bmbp_engine/: Cargo.toml
bmbp_express/: Cargo.toml
bmbp_file/: Cargo.toml
bmbp_form/: Cargo.toml
bmbp_home/: Cargo.toml
bmbp_home/src/: index.rs
bmbp_http/: Cargo.toml
bmbp_load/: Cargo.toml
bmbp_load/src/: init_bmbp.rs  (+1 more)
bmbp_macro/: Cargo.toml
bmbp_manager/: Cargo.toml
bmbp_montior/: Cargo.toml
bmbp_mq/: Cargo.toml
bmbp_orm/: Cargo.toml
bmbp_orm_adaptor/: Cargo.toml
bmbp_orm_ins/: Cargo.toml
bmbp_orm_ins/src/: lib.rs
bmbp_rbac/: Cargo.toml
bmbp_report/: Cargo.toml
bmbp_rutime/: Cargo.toml
bmbp_screen/: Cargo.toml
bmbp_set/: Cargo.toml
bmbp_test/: Cargo.toml
bmbp_third_api/: Cargo.toml
bmbp_types/: Cargo.toml
bmbp_util/: Cargo.toml
bmbp_util/src/: crypto.rs  id.rs  lib.rs  string.rs
bmbp_vars/: Cargo.toml
bmbp_vars/src/: app.rs  def.rs  map.rs
code/bmbp_app/: Cargo.toml
code/bmbp_app/src/: lib.rs
code/bmbp_app/src/env/: mod.rs  vars.rs
code/bmbp_app/src/plugin/: mod.rs
code/bmbp_app/src/routes/: mod.rs
code/bmbp_app_audit/: Cargo.toml
code/bmbp_app_auth/: Cargo.toml
code/bmbp_app_auth/src/: auth.rs  layer.rs
code/bmbp_app_auth/src/context/: mod.rs
code/bmbp_app_auth/src/service/: service.rs
code/bmbp_app_base/: Cargo.toml
code/bmbp_app_base/src/: index.rs  lib.rs  login.rs  router.rs
code/bmbp_app_cms/: Cargo.toml
code/bmbp_app_common/: Cargo.toml
code/bmbp_app_common/src/: lib.rs
code/bmbp_app_common/src/types/: bmbp_value.rs  global_auth.rs  global_err.rs  global_model.rs  global_req.rs  global_resp.rs  global_trait.rs  global_type.rs  global_valid.rs  global_value.rs  mod.rs
code/bmbp_app_common/src/utils/: base_model.rs  mod.rs
code/bmbp_app_common/src/vars/: mod.rs  tera_ctx.rs
code/bmbp_app_file/: Cargo.toml
code/bmbp_app_file/page/: file.bpg
code/bmbp_app_file/src/: embed.rs  lib.rs  tmpl.rs
code/bmbp_app_file/src/file/: mod.rs  model.rs  router.rs  web.rs
code/bmbp_app_file/src/view/: mod.rs
code/bmbp_app_init/: Cargo.toml
code/bmbp_app_init/lib/js/: init.js
code/bmbp_app_init/page/: init.btl
code/bmbp_app_init/src/: init.rs  lib.rs
code/bmbp_app_init/src/action/: init.rs
code/bmbp_app_init/src/view/: init.rs
code/bmbp_app_license/: Cargo.toml
code/bmbp_app_orm/: Cargo.toml
code/bmbp_app_orm/src/: lib.rs
code/bmbp_app_portal/: Cargo.toml
code/bmbp_app_portal/src/: index.rs  index_view.rs  lib.rs  routes.rs
code/bmbp_app_portal/src/login/: mod.rs  model.rs  route.rs  service.rs  view.rs  web.rs
code/bmbp_app_portal/src/portal/: mod.rs  route.rs  view.rs
code/bmbp_app_rbac/: Cargo.toml
code/bmbp_app_rbac/src/: lib.rs  router.rs
code/bmbp_app_rbac/src/app/: dao.rs  mod.rs  model.rs  router.rs  script.rs  service.rs  view.rs  web.rs
code/bmbp_app_rbac/src/app/model/: app.rs  app_menu.rs  app_role.rs  app_role_menu.rs  mod.rs  types.rs
code/bmbp_app_rbac/src/app_data_scope/: model.rs  router.rs  view.rs
code/bmbp_app_rbac/src/app_menu/: dao.rs  mod.rs  model.rs  router.rs  script.rs  service.rs  web.rs
code/bmbp_app_rbac/src/app_url/: router.rs
code/bmbp_app_rbac/src/menu/: model.rs  service.rs  view.rs
code/bmbp_app_rbac/src/organ/: dao.rs  mod.rs  model.rs  router.rs  script.rs  service.rs  view.rs  web.rs
code/bmbp_app_rbac/src/privilege/: mod.rs
code/bmbp_app_rbac/src/privilege/data_scope/: view.rs
code/bmbp_app_rbac/src/privilege/ui/: model.rs
code/bmbp_app_rbac/src/privilege/url/: view.rs
code/bmbp_app_rbac/src/res/: mod.rs  router.rs
code/bmbp_app_rbac/src/res/data_scope/: model.rs  view.rs
code/bmbp_app_rbac/src/res/element/: model.rs  view.rs
code/bmbp_app_rbac/src/res/menu/: mod.rs  model.rs  router.rs  script.rs  service.rs  view.rs  web.rs
code/bmbp_app_rbac/src/res/url/: model.rs  views.rs
code/bmbp_app_rbac/src/resource/: mod.rs
code/bmbp_app_rbac/src/resource/menu/: mod.rs  model.rs
code/bmbp_app_rbac/src/role/: dao.rs  mod.rs  model.rs  router.rs  script.rs  service.rs  view.rs  web.rs
code/bmbp_app_rbac/src/role_app/: router.rs
code/bmbp_app_rbac/src/role_app_data_scope/: model.rs  router.rs
code/bmbp_app_rbac/src/role_app_menu/: router.rs  view.rs
code/bmbp_app_rbac/src/role_app_url/: mod.rs  model.rs  router.rs
code/bmbp_app_rbac/src/role_privilege/: model.rs
code/bmbp_app_rbac/src/role_user/: dao.rs  mod.rs  model.rs  router.rs  script.rs  service.rs  web.rs
code/bmbp_app_rbac/src/user/: dao.rs  mod.rs  model.rs  router.rs  script.rs  service.rs  view.rs  web.rs
code/bmbp_app_setting/: Cargo.toml
code/bmbp_app_setting/src/: lib.rs  router.rs
code/bmbp_app_setting/src/dict/: dao.rs  mod.rs  model.rs  router.rs  scripts.rs  service.rs  web.rs
code/bmbp_app_setting/src/vars/: bean.rs  service.rs
code/bmbp_app_utils/: Cargo.toml
code/bmbp_app_utils/src/: lib.rs  string.rs  tree.rs  url.rs  valid.rs  value.rs
code/bmbp_app_vars/: Cargo.toml
code/bmbp_app_vars/src/: bean.rs  lib.rs
code/bmbp_bpm_design/: Cargo.toml
code/bmbp_bpm_engine/: Cargo.toml
code/bmbp_bpm_engine/src/curd/: mod.rs
code/bmbp_bpm_engine/src/func/: vars.rs
code/bmbp_bpm_engine/src/types/: app.rs  cache.rs
code/bmbp_bpm_upgrade/: Cargo.toml
code/bmbp_dev/: Cargo.toml
code/bmbp_dev/src/: router.rs
config/: bmbp.toml
(+686 files in other folders)
