[workspace]
members = ["crates/*"]
resolver = "2"
[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["bmbp<rs_bmbp.163.com>"]
description = "BMBP"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bmbper/bmbp"
repository = "https://github.com/bmbper/bmbp"
documentation = "https://github.com/bmbper/bmbp"
[workspace.dependencies]
bmbp_app = { version = "0.0.1", path = "crates/bmbp_app" }
bmbp_orm = { version = "0.0.1", path = "crates/bmbp_orm" }
bmbp_sql = { version = "0.0.1", path = "crates/bmbp_sql" }
bmbp_ui_lib = { version = "0.0.1", path = "crates/bmbp_ui_lib" }
bmbp_ui_theme = { version = "0.0.1", path = "crates/bmbp_ui_theme" }
bmbp_home = { version = "0.0.1", path = "crates/bmbp_home" }

# web框架
salvo = { version = "0.74", features = ["serve-static"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["default"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
rust-embed = { version = "8.5.0" }
include_dir = { version = "0.7.4" }
reqwest = "0.12.7"
#模板
tera = { version = "1.20.0", features = ["serde"] }
#序列化
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127", features = ["serde_derive"] }
toml = { version = "0.8.19", features = ["serde"] }
# 数据库
r2d2 = "0.8.10"
r2d2_redis = "0.14.0"
r2d2_postgres = "0.18.1"
r2d2_mysql = "25.0.0"
r2d2_sqlite = "0.25.0"
r2d2-oracle = "0.7.0"
r2d2_odbc = "0.5.0"
redb = { version = "2.1.2" }
# 工具
chrono = { version = "0.4.38" }
once_cell = { version = "1.19.0" }
async-trait = { version = "0.1.82" }
gm-rs = { version = "0.8.0" }
uuid = { version = "1.10.0", features = ["v4"] }
digest = "0.10.7"
hmac = "0.12.1"
md-5 = "0.10.6"
regex = "1.10.6"
# msg
rdkafka = "0.36.2"