[package]
name = "bmbp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# 全局参数存放
bmbp_app = { path = "../bmbp_app" }
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["fs", "trace"] }
tower = { version = "0.4", features = ["util"] }
once_cell = "1"
tera = "1"