[package]
name = "bmbp_audit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bmbp_common = { path = "../bmbp_common" }


tracing = "0.1"
# 序列
serde = { version = "1", features = ["derive"] }
serde_json = "1"
