[package]
name = "bmbp_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
bmbp_orm = { path = "../bmbp_orm" }
bmbp_vars = { path = "../bmbp_vars" }
