[package]
name = "bmbp_dsl_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde = { version = "1", features = ["derive"] }
serde_json = "1"
svg = "0.12"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
bmbp_dsl_define = { path = "../bmbp_dsl_define" }
bmbp_vars = { path = "../bmbp_vars" }
bmbp_util = { path = "../bmbp_util" }
bmbp_common = { path = "../bmbp_common" }
bmbp_orm = { path = "../bmbp_orm" }
bmbp_types = { path = "../bmbp_types" }
bmbp_rule = { path = "../bmbp_rule" }