[package]
name = "bmbp_home"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

bmbp_vars = { path = "../bmbp_vars" }

axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["fs", "trace"] }
tower = { version = "0.4", features = ["util"] }
