[package]
name = "bmbp_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bmbp_types = {path="../bmbp_types"}

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["serde", "v4"] }
base64 = "0.13"
md5 = "0.7"
sha2 = "0.10"
sha3 = "0.10"
aes = "0.8"
rsa = "0.7"
jwt = "0.16"
chrono = "0.4"