[package]
name = "bmbp_vars"
version = "0.1.0"
edition = "2021"
description = "存放Bmbp应用的全局参数与全局变量"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "1"
async-once-cell = "0.4"
tera = "1"
async_static = "0.1"
async-lock = "2"
bmbp_types = { path = "../bmbp_types" }
