[package]
name = "bmbp_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# 全局参数存放
bmbp_vars = { path = "../bmbp_vars" }
bmbp_types = { path = "../bmbp_types" }
bmbp_app_auth = { path = "../bmbp_app_auth" }
bmbp_app_rbac = { path = "../bmbp_app_rbac" }
bmbp_app_portal = { path = "../bmbp_app_portal" }
bmbp_app_audit = { path = "../bmbp_app_audit" }
bmbp_app_setting = { path = "../bmbp_app_setting" }
bmbp_app_init = { path = "../bmbp_app_init" }
bmbp_app_upgrade = { path = "../bmbp_app_upgrade" }
bmbp_app_file = { path = "../bmbp_app_file" }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# web
axum = "0.6"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
# json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# global
once_cell = "1"
# 异步
async-trait = "0.1"
toml = "0.5.9"