[package]
name = "bmbp_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# 全局参数存放
bmbp_app_common = { path = "../bmbp_app_common" }
bmbp_app_base = { path = "../bmbp_app_base" }
bmbp_app_auth = { path = "../bmbp_app_auth" }
bmbp_app_rbac = { path = "../bmbp_app_rbac" }
bmbp_app_portal = { path = "../bmbp_app_portal" }
bmbp_app_audit = { path = "../bmbp_app_audit" }
bmbp_app_setting = { path = "../bmbp_app_setting" }
bmbp_app_init = { path = "../bmbp_app_init" }
bmbp_app_upgrade = { path = "../bmbp_app_upgrade" }
bmbp_app_file = { path = "../bmbp_app_file" }
bmbp_dev = { path = "../bmbp_dev" }
bmbp_file = { path = "../bmbp_file" }

# web
uuid = { workspace = true }
once_cell = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
salvo = { workspace = true }
