[package]
name = "bmbp_app_audit"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
