[package]
name = "bmbp_app_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

salvo = { version = "0.48", features  =["full"] }
tokio = { version = "1", features = ["full"] }
