[package]
name = "bmbp_app_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bmbp_app_common = { path = "../bmbp_app_common" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

salvo = { version = "*",features=["default","serve-static","cors"] }
tokio = { version = "1", features = ["full"] }async-trait = "0.1.73"
