[package]
name = "bmbp_app_auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bmbp_app_common = { path = "../bmbp_app_common" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
salvo = { workspace = true }

