[package]
name = "bmbp_app_base"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bmbp_app_common = { path = "../bmbp_app_common" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
salvo = { version = "*" ,features=["default","serve-static","cors"]}
tokio = { version = "1.32.0", features = ["full"] }
tera = "1"
reqwest = "0.11"
# 序列
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
rust-embed="8.0.0"
async-trait = "0.1.73"
