[package]
name = "bmbp_app_base"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bmbp_app_common = { path = "../bmbp_app_common" }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
# 序列
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
async-trait = { workspace = true }
salvo = { workspace = true }
