[package]
name = "bmbp_app_cms"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "内容管理模块-给Portal提供内容管理服务"
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[dependencies]

bmbp_app_common = { path = "../bmbp_app_common" }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
# 序列
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
async-trait = { workspace = true }
salvo = { workspace = true }
