[package]
name = "bmbp_app_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
once_cell = "1"
async-once-cell = "0.4"
async_static = "0.1"
async-lock = "2"
async-trait = "0.1"
chrono = "0.4"
tera = "1.19.0"
rust-embed="6.8.1"
salvo = { version = "*",features=["default","serve-static","cors"]}
uuid = {version = "1.4.0",features=["serde","v4"]}
tokio = { version = "1.32.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
