[package]
name = "bmbp_app_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { workspace = true }
serde_repr = { workspace = true }
once_cell = { workspace = true }
async-once-cell = "0.5.3"
async_static = "0.1"
async-lock = "3.3.0"
async-trait = { workspace = true }
chrono = "0.4"
tera = "1.19.0"
rust-embed = "8.0.0"
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
salvo = { workspace = true }