[package]
name = "bmbp_app_common"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
once_cell = { workspace = true }
async-once-cell = { workspace = true }
async-lock = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tera = { workspace = true }
rust-embed = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
salvo = { workspace = true }