[package]
name = "bmbp_app_file"
version = "0.1.0"
edition = "2021"
description = "应用中附件和静态文件的管理模块"
[dependencies]

bmbp_app_common = { path = "../bmbp_app_common" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

salvo = { version = "0.50.5", features  =["full"] }
uuid = {version = "1.4.0",features=["serde","v4"]}
tokio = { version = "1", features = ["full"] }

# 序列
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
rust-embed="6.8.1"
