[package]
name = "bmbp_app_init"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bmbp_ui_lib = { path = "../bmbp_ui_lib" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
salvo = { workspace = true }
tera = { workspace = true }
lazy_static = { workspace = true }
rust-embed = { workspace = true }
