[package]
name = "bmbp_app_orm"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
[dependencies]
bmbp_rdbc = { worksapce = true }
bmbp_app_vars = { path = "../bmbp_app_vars" }