[package]
name = "bmbp_app_portal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bmbp_app_common = { path = "../bmbp_app_common" }
bmbp_app_utils = { path = "../bmbp_app_utils" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
salvo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }