[package]
name = "bmbp_app_rbac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

bmbp_orm_macro = { path = "../bmbp_orm_macro" }
bmbp_orm_ins = { path = "../bmbp_orm_ins" }
bmbp_app_common = { path = "../bmbp_app_common" }
bmbp_app_utils = { path = "../bmbp_app_utils" }

salvo = { version = "0.49", features  =["full"] }
tokio = { version = "1", features = ["full"] }


tera = "1"
reqwest = "0.11"

# 序列
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
rust-embed="6.8.1"
