[package]
name = "bmbp_app_rbac"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bmbp_app_common = { path = "../bmbp_app_common" }
bmbp_app_utils = { path = "../bmbp_app_utils" }
salvo = { version = "*" ,features=["default","serve-static","cors"]}
tokio = { version = "1", features = ["full"] }


tera = "1"
reqwest = "0.11"

# 序列
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
rust-embed="8.0.0"
async-trait = "0.1.73"
