[package]
name = "bmbp_app_setting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bmbp_app_common = { path = "../bmbp_app_common" }
bmbp_app_utils = { path = "../bmbp_app_utils" }
bmbp_rdbc_orm = { path = "../bmbp_rdbc_orm" }
bmbp_rdbc_marco = { path = "../bmbp_rdbc_marco" }

reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_repr = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
salvo = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }