[package]
name = "bmbp_app_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
case_style = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
uuid = {version = "1",features=["serde","v4"]}
md5 = "0.7"
rs_sha256 = "0.1.*"
chrono = "0.4"
base64 = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bmbp_app_common = {path="../bmbp_app_common"}
