[package]
name = "bmbp_app_vars"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "存储全局变量"
[dependencies]
serde = { workspace = true }
lazy_static = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
