[package]
name = "bmbp_app_base"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bmbp_orm_ins = { path = "../bmbp_orm_ins" }
bmbp_app_common = { path = "../bmbp_app_common" }
bmbp_app_utils = { path = "../bmbp_app_utils" }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }


tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.3", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
async-trait = "0.1"
