[package]
name = "bmbp_guid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
bmbp_app_common = { path = "../bmbp_app_common" }
bmbp_app_utils = { path = "../bmbp_app_utils" }
