[package]
name = "bmbp_dev"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
bmbp_dev_meta = { path = "../bmbp_dev_meta" }
bmbp_dev_runtime = { path = "../bmbp_dev_runtime" }
bmbp_dev_manage = { path = "../bmbp_dev_manage" }
bmbp_dev_engine = { path = "../bmbp_dev_engine" }
salvo = { workspace = true }